# SLoop

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sru_pull.py
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/middleware/: auth.py  rate_limit.py
apps/api/src/models/: alerts.py  billing.py  leads.py  me.py
apps/api/src/routers/: alerts.py  billing.py  leads.py  me.py
apps/api/src/services/: supabase.py
apps/web/: package.json  pnpm-lock.yaml
apps/worker/: .env.example  pyproject.toml
apps/worker/config/: predictor_rules.yaml
apps/worker/src/: config.py  main.py
apps/worker/src/cli/: backfill_contact.py  backfill_eigenaar_naam.py  backfill_eigenaar_type.py  backfill_sloopindicatoren.py  historical_backfill.py  inspect.py  osm_worker.py  run_adapter.py  run_alerts.py
apps/worker/src/clusterer/: clusterer.py
apps/worker/src/pipelines/: alerts_pipeline.py  eindhoven_leads_pipeline.py  koop_pipeline.py  pipeline_runner.py
apps/worker/src/predictor/: rules.py
apps/worker/src/scoring/: scores.py
apps/worker/src/sources/: bag.py  corporaties.py  duo_lookup.py  eponline.py  koop.py  kvk_lookup.py  osm_lookup.py  pdok.py
apps/worker/src/sources/pipeline/: __init__.py  bag_status_adapter.py  base.py  commissie_mer_adapter.py  eindhoven_vergunning_adapter.py  kadaster_stub.py  koop_prestatieafspraken_adapter.py  koop_sloopmelding_adapter.py  koop_sloopvergunning_adapter.py  koop_voornemen_adapter.py  ontwerp_plan_adapter.py  ruimtelijkeplannen_adapter.py  rvb_adapter.py
apps/worker/tests/: test_koop_parser.py  test_pdok.py  test_scoring.py
docs/: build-log-pipeline.md  build-log.md
(+40 files in other folders)
