[project]
name = "sloopradar-worker"
version = "0.1.0"
description = "Sloopradar ETL en scoring worker"
authors = [
    {name = "Joran Straatman",email = "joranstraatman93@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "supabase (>=2.30.0,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sentry-sdk (>=2.59.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
